google benchmark lib added

--- a/semester2/Lab3a/CMakeLists.txt
+++ b/semester2/Lab3a/CMakeLists.txt
@@ -3,11 +3,19 @@ project(Lab3a)
 
 set(CMAKE_CXX_STANDARD 17)
 
+option(BUILD_BENCHMARK "Build benchmarks" ON)
 option(BUILD_TESTS "Build tests" ON)
 
+add_executable(main main.cpp)
+
+if (BUILD_BENCHMARK)
+    add_executable(mybenchmark mybenchmark.cpp)
+    add_subdirectory(3rdparty/benchmark)
+    target_link_libraries(mybenchmark benchmark::benchmark)
+endif()
 
 if (BUILD_TESTS)
     add_executable(tests tests.cpp)
 endif()
 
-add_executable(Lab3a main.cpp)
+
