--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "semester2/team-algorithms-oop"]
-	path = semester2/team-algorithms-oop
+	path = semester2/lab2
 	url = git@github.com:YanaSkyrda/team-algorithms-oop.git
